# CFourStepNTT

./: draw.py  find_define_num.sage  find_define_num.sage.py  ntt_1024.sage  ntt_1024.sage.py  ntt_1024_2.sage  ntt_1024_2.sage.py  ntt_4_step.sage  ntt_4_step.sage.py  ntt_4_step_final.sage  ntt_4_step_final.sage.py
.github/workflows/: cmake-single-platform.yml
GPU-NTT/: 8-13.md  check.py  hxw.md  hxw.txt  hxw1.txt  model.py  modelgrid.py  run_files.sh  runfile.sh
GPU-NTT/8-16/: 8-16.md
GPU-NTT/8-23/: 8-23.md
GPU-NTT/9-22/: 9-22.md
GPU-NTT/9-6/: 9-6.md
GPU-NTT/benchmark/: bench_4step_ntt.cu
GPU-NTT/data_process/: draw_pic.py
GPU-NTT/example/cpu_ntt/: CMakeLists.txt  test_cpu_4step_negative_ntt.cu  test_cpu_4step_ntt.cu  test_cpu_merge_ntt.cu
GPU-NTT/example/gpu_ntt/ntt_4step/: CMakeLists.txt  test_4step_intt.cu  test_4step_negative_intt.cu  test_4step_negative_ntt.cu  test_4step_ntt.cu
GPU-NTT/example/gpu_ntt/ntt_merge/: test_merge_ntt.cu
GPU-NTT/src/common/include/: hxw_constant.cuh  nttparameters.cuh
GPU-NTT/src/common/lib/: nttparameters.cu
GPU-NTT/src/ntt/ntt_4step/include/: hxw_constant.cuh  ntt_4step.cuh  ntt_4step_cpu.cuh
GPU-NTT/src/ntt/ntt_4step/lib/: CMakeLists.txt  ntt_4step.cu  ntt_4step_cpu.cu
GPU-NTT/src/ntt/ntt_merge/lib/: ntt_cpu.cu
